# RAG_Application-

./: .gitignore  README.md  pyproject.toml
config/: logger_config.toml
data/: we.txt
src/sci_fi_explorer/: __init__.py  app.py
src/sci_fi_explorer/docker/: config.yaml  docker-compose.yml
tests/: test_app.py
